<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherOperation">

    <TextView
        android:id="@+id/main_background"
        android:layout_width="417dp"
        android:layout_height="734dp"
        android:background="#C4C4C4C4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="420dp"
        android:layout_height="94dp"
        android:background="@color/colorPrimary"
        android:text="@string/teacher_operation_title"
        android:textAlignment="center"
        android:textColor="#4196E3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/auto_check_attendance_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/auto_check_attendance_button"
        android:layout_width="249dp"
        android:layout_height="44dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/button_white"
        android:text="@string/auto_check_attendance_button"
        android:textColor="#4196E3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="249dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_white"
        android:text="@string/manual_check_attendance_button"
        android:textColor="#4196E3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/auto_check_attendance_button"
        app:layout_constraintTop_toBottomOf="@+id/auto_check_attendance_button" />

    <Button
        android:id="@+id/check_attendance_list_button"
        android:layout_width="249dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_white"
        android:text="@string/check_attendance_button"
        android:textColor="#4196E3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/return_button"
        app:layout_constraintTop_toBottomOf="@+id/return_button" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="90dp"
        android:layout_height="114dp"
        android:background="@drawable/home_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>