<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Student.StudentOperation">

    <TextView
        android:id="@+id/background_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorButtonNormal"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:text="@string/student_operation_title"
        android:textAlignment="center"
        android:textColor="#4196E3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/phone_icon"
        android:layout_width="36dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@+id/background_color"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toTopOf="@+id/title_text"
        app:srcCompat="@drawable/myphone" />

    <Button
        android:id="@+id/check_photo_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_white"
        android:text="@string/check_photo_button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/upload_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_white"
        android:text="@string/upload_photo_button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_photo_button" />

    <Button
        android:id="@+id/check_attendance_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_white"
        android:text="@string/check_attendance_button"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_button" />

    <Button
        android:id="@+id/join_course_button"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_white"
        android:text="加入課程"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_attendance_button" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="90dp"
        android:layout_height="114dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/home_gray"
        app:layout_constraintBottom_toBottomOf="@+id/background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>